# 2D-football-simulation

./: # Add the path to the FindVoronoi.cmake  # Find the Voronoi library.cmake  # FindVoronoi.cmake  AUTHORS  CMakeLists.txt  CppDNN.code-workspace  README  README.md  cmake-config.h.in  cmake_minimum_required(VERSION 3.cmake  find_path(VoronoiLibrary_INCLUDE_DIRS.cmake  start.sh.in
CppDNN/: CMakeLists.txt
CppDNN/positioning-passing-strategy/: README.md
CppDNN/positioning-passing-strategy-1/: CMakeLists.txt
CppDNN/positioning-passing-strategy-1/src/: player.cpp  player.h
CppDNN/positioning-passing-strategy-1/src/utils/: opencv_utils.h
CppDNN/positioning-passing-strategy/config/: config.yaml
CppDNN/positioning-passing-strategy/src/: main.cpp  strategy.cpp  strategy.h
CppDNN/positioning-passing-strategy/src/utils/: opencv_utils.cpp
CppDNN/src/: CMakeLists.txt
scripts/: FindVoronoiLibrary.cmake
scripts/training_unmark/: trainer.py
src/: 20250226092058-Cyrus2D_base_0-vs-null.rcg  CMakeCache.txt  CMakeLists.txt  config.h  dynamic_formation.cpp  evolution.h  game_analysis.py  keepaway.sh.in  main.cpp  player_detection.py  sample_trainer.cpp  start.sh.in  strategy.py  team_logo.xpm  train.sh.in
src/coach/: CMakeLists.txt  Makefile.am  const std::string team_name = "DRIGONSSC.cpp  evolution.py  find_path(Voronoi_INCLUDE_DIR NAMES vorocmake  sample_coach.cpp  sample_coach.h  sample_freeform_message.h  team_logo.xpm  team_points.cpp
src/player/: differentialEvolution.ts
src/trainer/: CMakeLists.txt  CppDNN.code-workspace  player_detection.py  sample_trainer.cpp  train.sh.in
ssil/: CppDNN.code-workspace  goalie-catch-our.conf
voro/: CMakeCache.txt  CMakeLists.txt  CppDNN.code-workspace  cmake_minimum_required(VERSION 3.cmake
voro/cmake/: # Add the path to the FindVoronoi.cmake  VoronoiConfig.cmake
voro/examples/basic/: convex_test  import  platonic  random_points  single_cell
voro/examples/custom/: cell_statistics  custom_output  radical
voro/examples/degenerate/: degenerate  degenerate2
voro/examples/extra/: box_cut  cut_region  irregular  l_shape  superellipsoid
voro/examples/interface/: find_voro_cell  loops  odd_even  polygons
voro/examples/no_release/: voro_lf.cc
voro/examples/walls/: cylinder  frustum  tetrahedron  torus
voro/src/: voro++
voronoi/src/: jc_voronoi_clip.h
